# Dynamics.io-Testbench

./: LICENSE  README.md
CPP_Bench/: CMakeLists.txt  conanfile.py
CPP_Bench/DynamicCompute/: CMakeLists.txt  conanfile.py
CPP_Bench/DynamicCompute/shaders/DirectX/: compile.bat
CPP_Bench/DynamicCompute/shaders/DirectX/Test/: CSMain_ret4.fxc
CPP_Bench/DynamicCompute/shaders/OpenCL/: test_cl_spv.bc  test_cl_spv.bs  test_cl_spv.cl
CPP_Bench/DynamicCompute/shaders/OpenCL/Tree/: Tree_old.cl  test_cl.bc
CPP_Bench/DynamicCompute/shaders/Vulkan/: compute_hlsl.comp  shader.vert  test_cl_spv.cl  test_cl_spv.spv
CPP_Bench/DynamicCompute/shaders/Vulkan/Tree/: Tree_Add.comp
CPP_Bench/DynamicCompute/shaders/Vulkan/Tree/Old/: Tree_Add.cl  Tree_cl.spv  Tree_vk.spv
CPP_Bench/DynamicCompute/shaders/Vulkan/Tree/Old2/: compute_glsl_cl.comp  compute_glsl_cl.spv  compute_hlsl_vk.spv
CPP_Bench/DynamicCompute/shaders/include/Tree/: Treelib.inc
CPP_Bench/DynamicCompute/source/: CMakeLists.txt
CPP_Bench/DynamicCompute/source/executable/: CMakeLists.txt  exe_main.cpp
CPP_Bench/DynamicCompute/source/public/: CMakeLists.txt  ComputeInterface.cpp  IComputeBuffer.cpp  IComputeController.cpp  IComputeController.h  IComputeProgram.cpp  IComputeProgram.h  PlatformStructures.h  std_includes.h
CPP_Bench/shaders/DirectX/: compute.fxc  compute.hlsl
CPP_Bench/shaders/OpenCL/: test_cl_spv.bc  test_cl_spv.cl  test_cl_spv.spv  test_cl_spv.txt
CPP_Bench/shaders/Vulkan/: compile.bat  shader.comp  shader.frag  shader.vert  test_cl_spv.cl  test_cl_spv.spv
CPP_Bench/shaders/include/: Types.inc
CPP_Bench/source/: CMakeLists.txt
CPP_Bench/source/executable/: CMakeLists.txt  exe_main.cpp
CS_Bench/Dynamics.Net/: Dynamics.Net.sln
CS_Bench/Dynamics.Net/Dynamics.Net/: Dynamics.Net.csproj  NativeObject.cs  Settings.cs
CS_Bench/Dynamics.Net/Dynamics.Net_Tester/: Dynamics.Net_Tester.csproj  Program.cs
Unity3D_Bench/: .gitignore
llvm_clang_Bench/Kernels/: test.clcpp  test_cl.bc  test_cl_opt.spv  test_cpp.bc  test_cpp.bs  test_cpp.spv  test_cpp_opt.spv  test_cpp_spv.clcpp
(+58 files in other folders)
